--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
-body{
-    background-color: blue;
+body{ 
+    background-color: ghostwhite
+}
+     ;
+}footer{
+    background-color: black;
+    color: white;
 }
