--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,28 @@
 body{ 
-    background-color: aliceblue
+    background-color: aliceblue;
+    font-family: Bai Jamjuree;
 }
-     ;
+
+#container{
+    display: flex
+}
+ 
+.cartao{
+    margin: 1rem 1rem
+}
+
+;
 }footer{
     background-color: black;
     color: white;
     bottom: 0;
     width: 100%;
+    height: 2rem;
+}
+
+
+footer p {
+    text-align: center;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
 }
